@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id('application')
-    id('org.javamodularity.moduleplugin') version '1.8.15'
+    id('org.javamodularity.moduleplugin') version '2.0.0'
     id('org.openjfx.javafxplugin') version '0.1.0'
     id('org.beryx.jlink') version '3.1.3'
 }
@@ -22,22 +22,20 @@ repositories {
 }
 
 javafx {
-    version = '25'
+    version = '25.0.1'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.38'
-    annotationProcessor 'org.projectlombok:lombok:1.18.38'
-
-    implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
-
-
-    implementation 'com.fazecast:jSerialComm:2.11.2'
+    compileOnly 'org.projectlombok:lombok:1.18.42'
+    annotationProcessor 'org.projectlombok:lombok:1.18.42'
+    implementation 'io.github.mkpaz:atlantafx-base:2.1.0'
+    implementation 'com.typesafe:config:1.4.5'
+    implementation 'com.fazecast:jSerialComm:2.11.4'
     implementation 'org.apache.commons:commons-text:1.14.0'
     implementation 'commons-codec:commons-codec:1.19.0'
-    implementation 'com.google.code.gson:gson:2.13.1'
+    implementation 'com.google.code.gson:gson:2.13.2'
 
     testImplementation platform('org.junit:junit-bom:5.12.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -58,25 +56,30 @@ application {
     mainModule = 'SerialPortToolFX'
     applicationDefaultJvmArgs = ['-Dfile.encoding=UTF-8'
                                  , '-XX:+UseZGC'
-            ,'-XX:+UseCompactObjectHeaders'
-            ,'--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
-            ,'--add-opens=java.base/java.io=ALL-UNNAMED'
+                                 , '-XX:+UseCompactObjectHeaders'
+                                 , '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+                                 , '--add-opens=java.base/java.io=ALL-UNNAMED'
+                                 , '--enable-native-access=javafx.graphics,com.fazecast.jSerialComm'
     ]
 }
-
+run {
+    jvmArgs += [
+            "--enable-native-access=javafx.graphics,com.fazecast.jSerialComm"
+    ]
+}
 jlink {
     options.set(List.of('--strip-debug', '--compress', 'zip-9', '--no-header-files', '--no-man-pages'))
     launcher {
-        name = application.applicationName + version
-        imageName.set(application.applicationName)
+        name = "SerialPortToolFX"
+        imageName.set("SerialPortToolFX")
     }
-    imageZip.set(project.layout.buildDirectory.file("image-zip/SerialPortToolFX.zip"))
+    imageZip.set(project.layout.buildDirectory.file("image-zip/${application.applicationName}.zip"))
 
     jpackage {
         outputDir = 'jpackage'
-        imageName = application.applicationName + "-" + version
-        installerName = application.applicationName + "-" + version
-        appVersion = version.toString()
+        imageName = "SerialPortToolFX"       // 镜像文件夹名字带版本号
+        installerName = "SerialPortToolFX"   // 安装包文件名带版本号
+        appVersion = version                               // 避免 jpackage 再自动拼一次
         vendor = "yiaobang"
         description = "A practical serial port utility built with JavaFX."
 
